ruby on rails part 1

--- a/app/views/produtos/index.html.erb
+++ b/app/views/produtos/index.html.erb
@@ -1,6 +1,4 @@
-<html>
-
-    <body>
+    <html>
         <table class="table table-bordered table-hover">
             <thead>
                 <tr>
@@ -8,6 +6,7 @@
                     <td>descrição</td>
                     <td>Preço</td>
                     <td>Quantidade</td>
+                    <td colspan="1">
                 </tr>
             </thead>
         <tbody>
@@ -17,14 +16,16 @@
                     <td><%= produto.descricao %></td>
                     <td><%= produto.preco %></td>
                     <td><%= produto.quantidade %></td>
+                    <td><%= button_to "Remover", produto, method: :delete, class:"btn btn-danger",
+                    data:{confirm: "Tem certeza que deseja remover o produto? #{produto.nome}"} %></td>
             </tr>
         <% end %>
     </tbody>
         </table>
     <div class="alert alert-success" role="alert">
     <h4 class="alert-heading">Produto com desconto</h4>
-</div>
-<table class="table table-bordered table-hover">
+    </div>
+    <table class="table table-bordered table-hover">
             <thead>
                 <tr>
                     <td>nome</td>
@@ -44,6 +45,3 @@
             <% end %>
         </tbody>
             </table>
-        </body>
-    </div>
-</html>
