--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,9 +8,18 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
-
-   <body>
-    <%= nav_bar brand: "Loja", brand_link: root_url %>
+  <body>
+    <%= nav_bar brand: "Loja", brand_link: root_url do %>
+      <%= menu_group do %>
+      <%= menu_item "Criar um novo produto", new_produto_path %>
+      <% end %>
+      <%= form_tag busca_produto_path, method: :get, class:"navbar-form navbar-right" do %>
+    <div class="form-group">
+      <%= text_field_tag :nome, @nome, class:"form-control" %>
+      <%= button_to "buscar", nil, class:"btn btn-default" %>
+    </div>
+      <% end %>
+  <% end %>
     <div class="container">
     <%= yield %>
     </div>
