--- a/app/views/produtos/index.html.erb
+++ b/app/views/produtos/index.html.erb
@@ -1,4 +1,9 @@
-    <html>
+<% if flash[:notice]%>
+    <div class="alert alert-success" role="alert">
+        <%= flash[:notice] %>
+    </div>
+<% end %>
+
         <table class="table table-bordered table-hover">
             <thead>
                 <tr>
