--- a/app/views/produtos/edit.html.erb
+++ b/app/views/produtos/edit.html.erb
@@ -48,5 +48,5 @@
                 </div>
             </div>
 
-            <%= form.submit "Criar", class:"btn btn-primary" %>
+            <%= form.submit "Atualizar", class:"btn btn-primary" %>
         <% end %>
