--- a/app/views/produtos/index.html.erb
+++ b/app/views/produtos/index.html.erb
@@ -9,22 +9,14 @@
                 <tr>
                     <td>nome</td>
                     <td>descrição</td>
+                    <td>departamento</td>
                     <td>Preço</td>
                     <td>Quantidade</td>
-                    <td colspan="1">
+                    <td colspan="2">
                 </tr>
             </thead>
         <tbody>
-    <% @produtos.each do |produto| %>
-            <tr>
-                    <td><%= produto.nome %></td>
-                    <td><%= produto.descricao %></td>
-                    <td><%= produto.preco %></td>
-                    <td><%= produto.quantidade %></td>
-                    <td><%= button_to "Remover", produto, method: :delete, class:"btn btn-danger",
-                    data:{confirm: "Tem certeza que deseja remover o produto? #{produto.nome}"} %></td>
-            </tr>
-        <% end %>
+        <%= render "produto" %>
     </tbody>
         </table>
     <div class="alert alert-success" role="alert">
